# halfbrown

./: .drone.yml  .gitignore  Cargo.toml  README.md
.circleci/: config.yml
.github/workflows/: rust.yml  validate.yaml
benches/: compare.rs
src/: entry.rs  iter.rs  lib.rs  macros.rs  raw_entry.rs  serde.rs  vecmap.rs
src/vecmap/: entry.rs  iter.rs  raw_entry.rs
