[package]
authors = ["Heinz N. Gies <heinz@licenser.net>"]
description = "Multi backend HashMap for higher performance on different key space sizes"
edition = "2018"
license = "Apache-2.0/MIT"
name = "halfbrown"
repository = "https://github.com/Licenser/halfbrown"
version = "0.1.18"

[dependencies]
fxhash = { version = "0.2", optional = true }
hashbrown = "0.13"
serde = { version = "1", default-features = false, optional = true }

[dev-dependencies]
criterion = "0.4"


[features]
default = []

[[bench]]
harness = false
name = "compare"
