[package]
authors = ["Heinz N. Gies <heinz@licenser.net>"]
description = "Multi backend HashMap for higher performance on different key space sizes"
edition = "2018"
license = "Apache-2.0/MIT"
name = "halfbrown"
repository = "https://github.com/Licenser/halfbrown"
version = "0.1.18"

[dependencies]
hashbrown = "0.13"
rustc-hash = { version = "1.1", optional = true }
serde = { version = "1", default-features = false, optional = true }

[dev-dependencies]
criterion = "0.4"


[features]
default = []
fxhash = ["rustc-hash"]

[[bench]]
harness = false
name = "compare"
