[package]
authors = ["Heinz N. Gies <heinz@licenser.net>"]
description = "Multi backend HashMap for higher performance on different key space sizes"
edition = "2018"
license = "Apache-2.0/MIT"
name = "halfbrown"
repository = "https://github.com/Licenser/halfbrown"
version = "0.3.0"

[dependencies]
hashbrown = "0.16"
rustc-hash = { version = "2.1", optional = true }
serde = { version = "1", default-features = false, optional = true }
arrayvec = { version = "0.7", optional = true }
[dev-dependencies]
criterion = "0.5"


[features]
default = []
fxhash = ["rustc-hash"]
arraybackend = ["arrayvec"]

[[bench]]
harness = false
name = "compare"
